force-app/main/default/objects/Truck_Run__c/Truck_Run__c.object-meta.xml
<CustomObject>
    <description>Object used to schedule and maintain mobile truck appointments and results.</description>
    <label>Truck Run</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Truck Run</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Truck Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>