force-app/main/default/objects/Truck_Run__c/fields/Actual_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Actual_Quantity__c</fullName>
    <description>Actual quantity of product sold on the truck run.</description>
    <inlineHelpText>Enter the quantity of product sold on this truck run.</inlineHelpText>
    <label>Actual Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>