force-app/main/default/objects/Truck_Run__c/fields/Actual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Actual_Revenue__c</fullName>
    <description>The actual dollar sales revenue achieved during truck run.</description>
    <inlineHelpText>Enter the actual sales revenue from the truck run</inlineHelpText>
    <label>Actual Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>