force-app/main/default/objects/Truck_Run__c/fields/Driver__c.field-meta.xml
<CustomField>
    <fullName>Driver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The driver assigned to the truck run.</description>
    <inlineHelpText>Select the name of the driver assigned to the truck run.</inlineHelpText>
    <label>Driver</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Truck Runs</relationshipLabel>
    <relationshipName>Truck_Runs</relationshipName>
    <type>Lookup</type>
</CustomField>