force-app/main/default/objects/Truck_Run__c/fields/End_Mileage__c.field-meta.xml
<CustomField>
    <fullName>End_Mileage__c</fullName>
    <description>The mileage of the truck after returning to the store, or arriving at your destination for the truck run.</description>
    <inlineHelpText>Enter the mileage on the odometer upon arrival at the account location or return to the store.</inlineHelpText>
    <label>End Mileage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>