force-app/main/default/objects/Truck_Run__c/fields/Forecast_Amount__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Amount__c</fullName>
    <description>Amount of revenue expected to be achieved on the truck run.</description>
    <inlineHelpText>Enter the amount of revenue you expect to achieve during the truck run.</inlineHelpText>
    <label>Forecast Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>