force-app/main/default/objects/Truck_Run__c/fields/Forecasted_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_Quantity__c</fullName>
    <description>The forecasted quantity of items you expect to achieve on the truck run.</description>
    <inlineHelpText>Enter the quantity of items you expect to sell on the truck run.</inlineHelpText>
    <label>Forecasted Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>