force-app/main/default/objects/Truck_Run__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Used to capture any pre or post run notes or comments related to the truck run.</description>
    <inlineHelpText>Enter any notes or comments related to the truck run.</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>