force-app/main/default/objects/Truck_Run__c/fields/Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Owner_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Truck Run Owner Id</description>
    <inlineHelpText>Truck Run Owner</inlineHelpText>
    <label>Owner Id</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Truck_Runs</relationshipName>
    <type>Lookup</type>
</CustomField>