force-app/main/default/objects/Truck_Run__c/fields/Run_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Run_End_Date__c</fullName>
    <label>Run End Date</label>
    <type>Date</type>
</CustomField>