force-app/main/default/objects/Truck_Run__c/fields/Run_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Run_End_Time__c</fullName>
    <description>Used to capture the scheduled ending time of the truck run.</description>
    <inlineHelpText>Enter the ending time for the truck run.</inlineHelpText>
    <label>Run End Time</label>
    <type>DateTime</type>
</CustomField>