force-app/main/default/objects/Truck_Run__c/fields/Run_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Run_Start_Date__c</fullName>
    <label>Run Start Date</label>
    <type>Date</type>
</CustomField>