force-app/main/default/objects/Truck_Run__c/fields/Run_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Run_Start_Time__c</fullName>
    <description>The time at which the truck run is scheduled to start.</description>
    <inlineHelpText>Enter the start time for the truck run.</inlineHelpText>
    <label>Run Start Time</label>
    <type>DateTime</type>
</CustomField>