force-app/main/default/objects/Truck_Run__c/fields/RWfB_Account__c.field-meta.xml
<CustomField>
    <fullName>RWfB_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identified the Red Wing for Business account where the truck run will be scheduled.</description>
    <inlineHelpText>Select the Red Wing for Business Account tied to the truck run.</inlineHelpText>
    <label>RWfB Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Business Partner Community</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Truck Runs</relationshipLabel>
    <relationshipName>Truck_Runs</relationshipName>
    <type>Lookup</type>
</CustomField>