force-app/main/default/objects/Truck_Run__c/fields/Start_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Start_Mileage__c</fullName>
    <description>Used to capture the truck mileage departing the store or previous account location.</description>
    <inlineHelpText>Enter starting truck mileage.</inlineHelpText>
    <label>Start Mileage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>