force-app/main/default/objects/Truck_Run__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The store that will be servicing the account on the truck run.</description>
    <inlineHelpText>Select the store associated with the truck run.</inlineHelpText>
    <label>Store</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>M3 Store Parent Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Truck Runs (Store)</relationshipLabel>
    <relationshipName>Truck_Runs_Store</relationshipName>
    <type>Lookup</type>
</CustomField>