force-app/main/default/objects/Truck_Run__c/fields/Truck__c.field-meta.xml
<CustomField>
    <fullName>Truck__c</fullName>
    <formula>HYPERLINK(&quot;https://redwingshoes--dev.cs13.my.salesforce.com/&quot; &amp; Truck_for_Run__r.Truck__c , Truck_for_Run__r.Truck__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Truck</label>
    <type>Text</type>
</CustomField>