force-app/main/default/objects/Truck_Run__c/fields/Truck_for_Run__c.field-meta.xml
<CustomField>
    <fullName>Truck_for_Run__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The truck that will be servicing the account on the truck run.</description>
    <inlineHelpText>Select the truck assigned to the run.</inlineHelpText>
    <label>Truck for Run</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Truck_for_Store__c.Truck_Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Truck_for_Store__c</referenceTo>
    <relationshipLabel>Truck Runs</relationshipLabel>
    <relationshipName>Truck_Runs</relationshipName>
    <type>Lookup</type>
</CustomField>