force-app/main/default/objects/Truck_Run__c/fields/Truck_Run_City__c.field-meta.xml
<CustomField>
    <fullName>Truck_Run_City__c</fullName>
    <description>Used to capture the city of the truck run if different from accounts physical address.</description>
    <inlineHelpText>Enter a city if different than accounts physical address.</inlineHelpText>
    <label>Truck Run City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>