force-app/main/default/objects/Truck_Run__c/fields/Truck_Run_Contact__c.field-meta.xml
<CustomField>
    <fullName>Truck_Run_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary contact for the truck run.  They will receive the email notifications.</description>
    <inlineHelpText>Select the contact to receive truck run notification emails.</inlineHelpText>
    <label>Truck Run Contact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please choose a valid truck run contact.</errorMessage>
        <filterItems>
            <field>Contact.Contact_Identifier__c</field>
            <operation>equals</operation>
            <value>Primary, Primary &amp; Billing, Truck Run, Primary, Billing, Primary &amp; Billing, Truck Run</value>
        </filterItems>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Business Partner</value>
        </filterItems>
        <filterItems>
            <field>Contact.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Truck Runs (Truck Run Contact)</relationshipLabel>
    <relationshipName>Truck_Runs_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>