force-app/main/default/objects/Truck_Run__c/fields/Truck_Run_State__c.field-meta.xml
<CustomField>
    <fullName>Truck_Run_State__c</fullName>
    <description>2 character state abbreviation for truck run location.  Used if different from accounts physical address.</description>
    <inlineHelpText>Enter the 2 character state abbreviation if different from physical address for account.</inlineHelpText>
    <label>Truck Run State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>