force-app/main/default/objects/Truck_Run__c/fields/Truck_Run_Status__c.field-meta.xml
<CustomField>
    <fullName>Truck_Run_Status__c</fullName>
    <description>Identifies the status of the truck run as either scheduled, or having been completed/cancelled.</description>
    <inlineHelpText>Select the status of the truck run.</inlineHelpText>
    <label>Truck Run Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>