force-app/main/default/objects/Truck_Run__c/fields/Truck_Run_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Truck_Run_Street_Address__c</fullName>
    <description>Used to capture a specific address for the truck run if different from physical location address on account.</description>
    <inlineHelpText>Enter a street address for the run, if different from accounts physical address.</inlineHelpText>
    <label>Truck Run Street Address</label>
    <length>200</length>
    <type>Text</type>
</CustomField>