force-app/main/default/objects/Truck_Run__c/fields/Truck_Run_Type__c.field-meta.xml
<CustomField>
    <fullName>Truck_Run_Type__c</fullName>
    <description>Used to identify the purpose of the time slot for the truck.</description>
    <inlineHelpText>Select the type of run.</inlineHelpText>
    <label>Truck Run Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Industrial Account</fullName>
                <default>true</default>
                <label>Industrial Account</label>
            </value>
            <value>
                <fullName>Local Event</fullName>
            </value>
            <value>
                <fullName>Planned Maintenance</fullName>
            </value>
            <value>
                <fullName>Unplanned Maintenance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>