force-app/main/default/objects/Truck_Run__c/fields/Truck_Run_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Truck_Run_Zip_Postal_Code__c</fullName>
    <description>Used to capture the zip code of the truck run location if different than the physical address of the account.</description>
    <inlineHelpText>Enter the zip code of the truck run location if different than the physical address of the account.</inlineHelpText>
    <label>Truck Run Zip/Postal Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>