force-app/main/default/objects/Truck_Run__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RWfB_Account__c</columns>
    <columns>Status__c</columns>
    <columns>Run_Start_Date__c</columns>
    <columns>Run_Start_Time__c</columns>
    <columns>Run_End_Date__c</columns>
    <columns>Run_End_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>